--- a/fun.html
+++ b/fun.html
@@ -5,4 +5,4 @@ title: Willie Yao
 
 <h1>things that made me chuckle<h1>
 
-<img src="../img/security.jpg" title="Security"/>
+<img src="../img/security.jpg" title="security fail"/>
