--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Willie Yao
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>General</h1>
   <ul class="posts">
     {% for post in site.posts %}
       {% if post.tag == "blog" %}
@@ -13,7 +13,7 @@ title: Willie Yao
     {% endfor %}
   </ul>
 
-  <h1>School Posts</h1>
+  <h1>School</h1>
   <ul class="posts">
     {% for post in site.posts %}
       {% if post.tag == "school" %}
