--- a/me.html
+++ b/me.html
@@ -7,7 +7,7 @@ title: Willie Yao
   <h1>about me</h1>
   <p>I'm currently a junior studying computer science at Harvard. 
     I'm originally from Taiwan and have lived in Taipei, New York, 
-    San Diego, San Jose, Venice, and Cambridge.
+    San Diego, San Jose, Venice, and Cambridge. I can be reached
+    at [wyao @ this domain].
   </p>
-
 </div>
