Added Books section. New posts.

--- a/d3/courses.html
+++ b/d3/courses.html
@@ -20,7 +20,7 @@ button.relevant{
   color:green;
 }
 .future{
-  color:yellow;
+  color:orange;
 }
 
 path.link {
@@ -40,7 +40,7 @@ circle.taken {
 }
 
 circle.future{
-  fill:yellow;
+  fill:orange;
 }
 
 text {
