--- a/fun.html
+++ b/fun.html
@@ -1,8 +1,15 @@
 ---
 layout: default
-title: Willie Yao
+title: Willie Yao - Fun
 ---
 
 <h1>things that made me chuckle<h1>
 
-<img src="../img/security.jpg" title="security fail"/>
+<a href="http://www.reuters.com/politics/elections-2012">
+  <img src="../img/paul_vs_romney.png" width="900px" 
+     title="paul money vs romney money. too real."/>
+</a>
+
+</br></br>
+
+<img src="../img/security.jpg" title="security fail."/>
