--- a/me.html
+++ b/me.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-title: Willie Yao
+title: Willie Yao - Me
 ---
 
 <div>
   <h1>about me</h1>
   <p>I'm currently a junior studying computer science at Harvard. 
     I'm originally from Taiwan and have lived in Taipei, New York, 
-    San Diego, San Jose, Venice, and Cambridge. I can be reached
-    at [wyao @ this domain].
+    San Diego, San Jose, Venice, and Cambridge. My favorite sports 
+    are those played on frozen water and my favorite 
+    candy is <a href="http://www.amazon.com/Morinaga-Hi-chew-Fruit-Assorted-Flavors/dp/B003M6HHBE">Hi-chew (ハイチュウ)</a>. I'm interested in doing crazy things
+    and can be reached at [wyao @ this domain].
   </p>
 </div>
